datasets/dataset_txt/tornado/tornado_1045.txt
tr00per commented on 18 Oct 2012
I've checked out the latest revision and run ./runtests.sh. I got:
Traceback (most recent call last):
  File "/usr/lib/python3.2/runpy.py", line 160, in _run_module_as_main
    "__main__", fname, loader, pkg_name)
  File "/usr/lib/python3.2/runpy.py", line 73, in _run_code
    exec(code, run_globals)
  File "/home/tr00per/projects/tornado/tornado/test/runtests.py", line 7, in <module>
    from tornado.httpclient import AsyncHTTPClient
  File "tornado/httpclient.py", line 406
    except HTTPError, e:
                    ^
SyntaxError: invalid syntax